# Homework01

./: README.md  WebServer.py  client.py  data.ini  requirements.txt  server.py  开发过程文档.docx  软件使用说明文档.docx
2018141231037毛如石/: 2018141231037 毛如石.rar
2018141231089林世龙/: TCP_1.py  UDP_1.py  UI_1.py  main.py  stopThreading.py  软件说明文档.md
2018141424178徐晓龙/: requirements.txt
2018141451249詹沛文/: pop.reciver.py  requirements.txt  smtp.sender.py  项目报告.docx
2018141501263胡方晨/: CMakeLists.txt  编译配置说明.txt
2018141501263胡方晨/include/: Client.h  Common.h  Server.h
2018141501263胡方晨/src/: Client.cpp  ClientMain.cpp  Server.cpp  ServerMain.cpp
2019141240178夏琦妮/: init.py  my_client.py  my_client_2.py  my_server.py  requirements.txt  test.py
2019141460391_廖柏龙/: README.md
2019141460398-黄浩文/: requirements.txt
2019141460404王泽远/: CMakeLists.txt  readme.md
2019141460413张乐一/: README.ini
2019141460500杨阳/: 开发过程文档.docx  软件使用说明书.docx
2019141460513柳溪桥/: webserver.py
2019141470405李昕霖/: mail_client.py
2019141470406牛池/: client.py  文档
2019141470412赵映沣/: client.py  配置文档说明
2019141470413-张艺馨 & 2019141470450-李洁/: 2019141470450-李洁 & 2019141470413-张艺馨.rar  a.cpp
2019141470414雒彬赫/: 内容介绍.md
2019141470415尤敬尧/: 使用说明  演示视频链接  环境配置
2019141470416白马腾/: 附件3：本地数据E-R模型.eddx  附件4：项目汇报视频链接.txt  附件5：requirements.txt  附件6：readme.txt
2019141470418徐添/: requirements.txt  需求配置
2019141470421杨颖欣&2019141480371王韵茹/: mainwindow.cpp
2019141470422管筠箫/: requirements.txt  run.sql
2019141470426 赵雪峰/: README.md  readme.md  requirements.txt  rpc.md  utils.md
2019141470428/: myprogram.cpp
(+255 files in other folders)
